--- a/src/components/styles/css/Btn.css
+++ b/src/components/styles/css/Btn.css
@@ -1,15 +1,33 @@
+.btn-blue {
+  background-color: blue;
+  color: white;
+  border: 2px solid blue;
+}
+.btn-blue:hover {
+  background-color: blue;
+  color: lightblue;
+}
+
+.btn-white {
+  background-color: white;
+  color: blue;
+  border: 2px solid blue;
+}
+.btn-white:hover {
+  background-color: white;
+  color: blue;
+  border-color: lightblue;
+}
+
 .btn {
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: blue;
-  color: white;
-  border: none;
+  padding-left: 15px;
+  padding-right: 15px;
 }
-.btn:hover {
-  background-color: lightblue;
-  color: black;
+.btn p.p-btn {
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 /*# sourceMappingURL=Btn.css.map */
