--- a/src/components/styles/css/InputField.css
+++ b/src/components/styles/css/InputField.css
@@ -1,5 +1,13 @@
 .input-field {
   text-align: start;
+  min-width: 50%;
+}
+.input-field p {
+  margin: 0;
+  padding: 0;
+}
+.input-field p.error {
+  color: red;
 }
 
 /*# sourceMappingURL=InputField.css.map */
