--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,10 +4,17 @@
   align-items: start;
 }
 
+.column-center-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .row-left-flex {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: start;
 }
 
 .row-space-flex {
@@ -18,10 +25,13 @@
   width: 100%;
 }
 
-html, body {
-  min-height: 100%;
+html {
+  height: 100%;
   position: relative;
-  background-color: lightgray;
+}
+
+body {
+  background-color: lightgrey;
 }
 
 h3 {
