--- a/src/components/styles/css/Radios.css
+++ b/src/components/styles/css/Radios.css
@@ -4,5 +4,9 @@
 .radios p {
   margin: 0;
 }
+.radios p.error {
+  margin: 0 !important;
+  color: red;
+}
 
 /*# sourceMappingURL=Radios.css.map */
