--- a/src/pages/styles/scss/FormPage.scss
+++ b/src/pages/styles/scss/FormPage.scss
@@ -4,6 +4,7 @@
   max-width: 600px;
   margin: 30px auto;
   padding: 40px;
+  overflow: hidden;
 
   .step-img {
     width: 100%;
@@ -36,4 +37,5 @@
   .btn {
     align-self: end;
   }
+
 }
