--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,6 +34,10 @@ body {
   background-color: lightgrey;
 }
 
+* {
+  font-family: "SB Sans Interface", sans-serif;
+}
+
 h3 {
   font-size: 20px;
   font-weight: 600;
