--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,9 @@
+@import url(//db.onlinewebfonts.com/c/37086b994764dba84b2ee0f1083bfeed?family=SB+Sans+Interface);
+@font-face {
+  font-family: "SB Sans Interface";
+  src: url("//db.onlinewebfonts.com/t/37086b994764dba84b2ee0f1083bfeed.eot");
+  src: url("//db.onlinewebfonts.com/t/37086b994764dba84b2ee0f1083bfeed.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/37086b994764dba84b2ee0f1083bfeed.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/37086b994764dba84b2ee0f1083bfeed.woff") format("woff"), url("//db.onlinewebfonts.com/t/37086b994764dba84b2ee0f1083bfeed.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/37086b994764dba84b2ee0f1083bfeed.svg#SB Sans Interface") format("svg");
+}
 .column-left-flex {
   display: flex;
   flex-direction: column;
@@ -34,8 +40,12 @@ body {
   background-color: lightgrey;
 }
 
+a {
+  text-decoration: none;
+}
+
 * {
-  font-family: "SB Sans Interface", sans-serif;
+  font-family: "SB Sans Interface";
 }
 
 h3 {
@@ -46,7 +56,7 @@ h3 {
   text-align: left;
 }
 
-p {
+p, a {
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
