--- a/src/components/styles/scss/ManyInputFields.scss
+++ b/src/components/styles/scss/ManyInputFields.scss
@@ -1,10 +1,14 @@
 .many-input-fields {
-  .input-field {
-    margin: 5px 0;
-  }
 
   p {
     margin: 0;
+  }
+
+  .input-field {
+    margin: {
+      top: 0;
+      bottom: 8px;
+    };
   }
 
   .remove-img {
