--- a/src/pages/styles/scss/MainPage.scss
+++ b/src/pages/styles/scss/MainPage.scss
@@ -1,10 +1,15 @@
 .main-page {
   position: relative;
   background-color: white;
-  max-width: 600px;
+  max-width: 900px;
+  min-height: 704px;
   margin: 30px auto;
   padding: 20px;
   opacity: 0;
+
+  @media screen and (max-height: 705px) {
+    min-height: 500px;
+  }
 
   p, h3 {
     padding: 0;
@@ -12,13 +17,28 @@
   }
 
   .header {
-    border-bottom: 2px solid lightblue;
+    border-bottom: 1px solid rgba(0,0,0,0.08);
     width: 100%;
+
+    .links {
+      margin-top: 8px;
+      flex-wrap: wrap;
+      gap: 16px;
+      
+      @media screen and (max-width: 400px) {
+        flex-direction: column;
+        align-items: start;
+        gap: 5px;
+      }
+    }
+
   }
 
   .ava-img-wrap {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
+    min-height: 80px;
+    min-width: 80px;
     background-position: center center;
     background-repeat: no-repeat;
     background-image: url("../../../images/ava.jpg");
@@ -28,20 +48,15 @@
       right: 20px;
       bottom: 20px;
     }
-  }
 
-  .social-link {
-    padding: {
-      right: 10px;
-    };
   }
 
   .input-field {
-    margin-top: 20px;
+    margin-top: 24px;
   }
 
   #start-btn-wrap {
-    margin-top: 40px;
+    margin-top: 48px;
   }
 
 
