--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -43,7 +43,7 @@ html {
 }
 
 body {
-  background-color: lightgrey;
+  background-color: #F4F4F5;
 }
 
 a {
@@ -56,7 +56,6 @@ a {
 
 
 h3 {
-  //styleName: Headers/H3 Semibold;
   font-size: 20px;
   font-weight: 600;
   line-height: 26px;
@@ -65,12 +64,19 @@ h3 {
 }
 
 p, a {
-  //styleName: Text/Text 2;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
   letter-spacing: 0;
   text-align: left;
+}
+
+input, select {
+  height: 44px;
+}
+
+.btn {
+  height: 44px;
 }
 
 
